# update_playlist

./: .gitignore  README.md  playlist.config  playlist.json  pyproject.toml  setup.cfg  update_playlist.py
app/: config.py  file_manager.py  main.py  playlist.py  spotify.py
src/update_playlist/: config.py
systemd/: update_playlist.service  update_playlist.timer
update_playlist/: playlist.py
