[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "update-playlist"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A modular playlist manager to download and manage Spotify playlists."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "spotdl",
    "spotipy",
    "pytube",
    "ytmusicapi",
    "yt-dlp",
    "requests",
    "beautifulsoup4",
    "mutagen",
    "pykakasi",
    "jaconv",
    "python-slugify",
    "unidecode",
    "rich",
    "click",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
update-playlist = "update_playlist.main:main"
