[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "update-playlist"
version = "0.1.0"
authors = [
  { name="Antonio Labate", email="antoniolabate19@gmail.com" },
]
description = "A modular playlist manager to download and manage Spotify playlists."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "spotdl",
    "yt-dlp",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/totolab/update_playlist"
"Bug Tracker" = "https://github.com/totolab/update_playlist/issues"

[project.scripts]
update-playlist = "update_playlist.main:main"
